<resources>
    <string name="app_name">Trippie</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">Get started</string>

    <string name="slide_1_title">Hello Traveler!</string>
    <string name="slide_1_desc">Your personal travel guide!</string>

    <string name="slide_2_title">Travel Anywhere</string>
    <string name="slide_2_desc">Travel the world, yet keep track of your trip!</string>

    <string name="slide_3_title">Relax!</string>
    <string name="slide_3_desc">We\'ll remind you where to visit!</string>

    <string name="slide_4_title">Excited?</string>
    <string name="slide_4_desc">Let\'s get started!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="not_registered_yet_click_here_to_sign_up">Not registered yet? Click here to sign up</string>
    <string name="your_name">Your Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_registered_click_here_to_login">Already registered? Click here to login</string>
    <string name="address">Address</string>
    <string name="latitude">Latitude: 0.00</string>
    <string name="longitude">Longitude: 0.00</string>
    <string name="name">Name</string>
    <string name="type">type</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="want_to_exit">Do you want to exit the app</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="added_to_bucketlist">added to bucketlist!</string>
    <string name="bucketlist">BucketList</string>
    <string name="Name">name</string>
    <string name="API_KEY"><![CDATA[&key=AIzaSyC1Svb1mu2sq-sdXzrRoI-VVsSR4BoWEkA]]></string>
    <string name="geometry">geometry</string>
    <string name="temp_rating">0.0</string>
    <string name="no_suggestions_found">No suggestions found. Try again!</string>
    <string name="tryagain">Try Again</string>
    <string name="img_url">https://cdn.browshot.com/static/images/not-found.png</string>
    <string name="map_google_api"><![CDATA[https://maps.googleapis.com/maps/api/place/photo?maxheight=400&photoreference=]]></string>
    <string name="id">id</string>
    <string name="query">query=Tourist%20places%20in%20</string>
    <string name="Number">number</string>
    <string name="Place">Place: %s</string>
    <string name="Number_of_trips">Number of trips: %s</string>
    <string name="visited">visited</string>
    <string name="User_Location">User Location</string>
    <string name="Address">address</string>
    <string name="Latitude">latitude</string>
    <string name="Longitude">longitude</string>
    <string name="Visited">visited</string>
    <string name="latlng">latlng=</string>
    <string name="all_fields_must_be_filled">All fields must be filled</string>
    <string name="Empty_field">Empty Field</string>
    <string name="Registering_User">Registering user...</string>
    <string name="Please_wait">Please wait!</string>
    <string name="ok">OK</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="message1">You entered an invalid email address</string>
    <string name="message2">Password must contain atleast 6 characters</string>
    <string name="invalid_Password">Invalid Password!</string>
    <string name="message3">Password did not match, try again!</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="empty_field">Empty Field</string>
    <string name="message4">All fields must be filled</string>
    <string name="registering_user">Registering user...</string>
    <string name="please_wait">Please wait!</string>
    <string name="text1">Could not make the user!</string>
    <string name="BucketList">BucketList</string>
    <string name="Id">id</string>
    <string name="Lati">latitude</string>
    <string name="Longi">longitude</string>
    <string name="text2">GPS not permission granted</string>
    <string name="lang_settings">Language Settings</string>
    <string name="location_settings">Location Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_lang">Change system language</string>
    <string name="gps_on">Turn the system GPS on or off</string>
    <string name="where_do_you_want_to_visit">Where do you want to visit?</string>
    <string name="search">Search</string>
    <string name="bucket_list_empty">Bucket list empty!</string>
    <string name="name_item">NAME</string>
    <string name="address_item">Address</string>
    <string name="fullname">Ravneet Singh</string>
    <string name="email">ravneet@gmail.com</string>
    <string name="dashboard">Dashboard</string>
    <string name="maps">Maps</string>
    <string name="history">History</string>
    <string name="mylocation">MyLocation</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="other">Other</string>
    <string name="url_1">https://maps.googleapis.com/maps/api/geocode/json?</string>
    <string name="results">results</string>
    <string name="formatted_address">formatted_address</string>
    <string name="this_is_where_you_are">This is where you are!</string>
    <string name="address_s">Address: %s</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="Please_enable_GPS">Please enable GPS</string>
    <string name="url_2">latlng=</string>
    <string name="url1_textsearch">https://maps.googleapis.com/maps/api/place/textsearch/json?</string>
    <string name="place_id">place_id</string>
    <string name="name_json">name</string>
    <string name="types_json">types</string>
    <string name="photo_reference_json">photo_reference</string>
    <string name="photos_json">photos</string>
    <string name="ratings_json">rating</string>
    <string name="geometry_json">geometry</string>
    <string name="location_json">location</string>
    <string name="lat_json">lat</string>
    <string name="lng_json">lng</string>
    <string name="place_id_json">place_id</string>
    <string name="okay">OK!</string>
    <string name="rating_json">rating</string>

</resources>