<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="travelers.tripplanner.fragments.MyLocation">

    <!-- TODO: Update blank fragment layout -->


    <android.support.v7.widget.CardView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/address"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_below="@+id/Address"
            android:text="@string/latitude"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Lng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_below="@+id/Lat"
            android:text="@string/longitude"
            android:textSize="18sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
